<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
    <LinearLayout
      android:id="@+id/adLayout"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:gravity="center" />
    <Button
        android:id="@+id/select_picture"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:drawableRight="@drawable/gallery"
        android:textColor="#ffeeeeee" 
        android:background="@drawable/command_background"        
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:layout_margin="3dp"
        android:text="@string/select_a_photo" />
    <Button
        android:id="@+id/take_picture"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/select_picture"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="3dp"
        android:drawableRight="@drawable/camera"
        android:textColor="#ffeeeeee" 
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:background="@drawable/command_background"        
        android:text="@string/take_a_photo" />
    <Button
        android:id="@+id/about"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/select_picture"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="3dp"
        android:drawableRight="@drawable/about"
        android:textColor="#ffeeeeee" 
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:background="@drawable/command_background"        
        android:text="@string/about" />
</RelativeLayout>